@@ -1,3 +1,9 @@
+2008-04-09 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
+
+	* src/MMapArea.py
+	Move multiple thoughts (fix issue 93). Introduced escape key
+	deselecting all thoughts.
+
 2008-04-08 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
 
 	* src/MainWindow.py
